[gd_scene load_steps=6 format=3 uid="uid://b0pbhgx1cs4wi"]

[ext_resource type="Shader" uid="uid://bhl5hejiekm6q" path="res://Shaders/star_parallax.gdshader" id="1_2shtd"]
[ext_resource type="Script" uid="uid://m8oqp3hg1n1w" path="res://Scripts/shop.gd" id="1_fdj0q"]
[ext_resource type="Texture2D" uid="uid://bh55t77q1ubdj" path="res://Assets/title_screen/Background_NoStars.png" id="2_io27d"]
[ext_resource type="PackedScene" uid="uid://wu84ubnk1cmi" path="res://Scenes/global.tscn" id="3_io27d"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_fdj0q"]
shader = ExtResource("1_2shtd")
shader_parameter/dimensions = Vector2(1024, 600)
shader_parameter/small_stars = 50.0
shader_parameter/small_stars_far_size = 0.3
shader_parameter/small_stars_near_size = 0.4
shader_parameter/large_stars = 8.0
shader_parameter/large_stars_far_size = 0.1
shader_parameter/large_stars_near_size = 0.2
shader_parameter/far_stars_color = Color(0.5, 0, 1, 1)
shader_parameter/near_stars_color = Color(1, 1, 1, 1)
shader_parameter/base_scroll_speed = 0.02
shader_parameter/additional_scroll_speed = 0.07

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fdj0q")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.197

[node name="BackgroundNoStars" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_fdj0q")
position = Vector2(3, -2)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_io27d")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(1, 0)
zoom = Vector2(1.5, 1.5)

[node name="Back" type="Button" parent="."]
layout_mode = 0
offset_left = -22.0
offset_top = 134.0
offset_right = 23.0
offset_bottom = 165.0
text = "Back"

[node name="Global" parent="." instance=ExtResource("3_io27d")]
layout_mode = 1
offset_left = 19.0
offset_top = 45.0
offset_right = 19.0
offset_bottom = 45.0

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -935.0
offset_top = -541.0
offset_right = -217.0
offset_bottom = -205.0
grow_horizontal = 2
grow_vertical = 2

[node name="Buying Options" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 100
columns = 4

[node name="Purchase 10" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "10 Kg"

[node name="Purchase 20" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "20 Kg"

[node name="Purchase 50" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "50 Kg"

[node name="Purchase 100" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "100 Kg"

[node name="Purchase 200" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "200 Kg"

[node name="Purchase 500" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "500 Kg"

[node name="Purchase 1000" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "1000 Kg"

[node name="Purchase 2000" type="Button" parent="MarginContainer/Buying Options"]
layout_mode = 2
text = "2000 Kg"

[node name="Currency conversion" type="Label" parent="."]
layout_mode = 0
offset_left = -359.0
offset_top = -160.0
offset_right = -264.0
offset_bottom = -137.0
text = "$0.25 per Kg"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 10" to="." method="_on_purchase_10_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 20" to="." method="_on_purchase_20_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 50" to="." method="_on_purchase_50_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 100" to="." method="_on_purchase_100_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 200" to="." method="_on_purchase_200_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 500" to="." method="_on_purchase_500_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 1000" to="." method="_on_purchase_1000_pressed"]
[connection signal="pressed" from="MarginContainer/Buying Options/Purchase 2000" to="." method="_on_purchase_2000_pressed"]
